--- a/Разминка/Условия.md
+++ b/Разминка/Условия.md
@@ -18,4 +18,8 @@
 ![image](https://github.com/user-attachments/assets/3bc97174-d4c7-466f-bf4a-2ec6b970e4d1)
 ### H
 ![image](https://github.com/user-attachments/assets/e1405e39-3799-4210-9d8e-2f962b349d68)
+### I
+![image](https://github.com/user-attachments/assets/017579f8-cc43-4730-9a9c-4002e34292e8)
+### J
+![image](https://github.com/user-attachments/assets/9c8f1f3f-2fdb-41c6-b375-406cbe17b67b)
 
